<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal"
    xmlns:hangman="http://schemas.android.com/apk/res-auto"
    android:weightSum="100">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:id="@+id/gallows"
            android:layout_gravity="top"
            android:src="@drawable/error0"
            android:adjustViewBounds="false"
            android:layout_weight="50"
            android:scaleType="fitCenter"
            android:scaleX="0.5"
            android:scaleY="0.5"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15pt"
            android:id="@+id/the_word"
            android:gravity="center"
            android:layout_weight="10"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="5"
            android:rowCount="6">

            <!-- 第一行 -->
            <Button
                android:id="@+id/Button_A"
                android:layout_width="40dp"
                android:text="A" />

            <Button
                android:id="@+id/Button_B"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="B" />

            <Button
                android:id="@+id/Button_C"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="C" />

            <Button
                android:id="@+id/Button_D"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="D" />

            <Button
                android:id="@+id/Button_E"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="E" />

            <!-- 第二行 -->
            <Button
                android:id="@+id/Button_F"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="F" />

            <Button
                android:id="@+id/Button_G"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="G" />

            <Button
                android:id="@+id/Button_H"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="H" />

            <Button
                android:id="@+id/Button_I"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="I" />

            <Button
                android:id="@+id/Button_J"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="J" />

            <!-- 第三行 -->
            <Button
                android:id="@+id/Button_K"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="K" />

            <Button
                android:id="@+id/Button_L"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="L" />

            <Button
                android:id="@+id/Button_M"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="M" />

            <Button
                android:id="@+id/Button_N"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="N" />

            <Button
                android:id="@+id/Button_O"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="O" />

            <!-- 第四行 -->
            <Button
                android:id="@+id/Button_P"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="P" />

            <Button
                android:id="@+id/Button_Q"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="Q" />

            <Button
                android:id="@+id/Button_R"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="R" />

            <Button
                android:id="@+id/Button_S"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="S" />

            <Button
                android:id="@+id/Button_T"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="T" />

            <!-- 第五行 -->
            <Button
                android:id="@+id/Button_U"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="U" />

            <Button
                android:id="@+id/Button_V"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="V" />

            <Button
                android:id="@+id/Button_W"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="W" />

            <Button
                android:id="@+id/Button_X"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="X" />

            <Button
                android:id="@+id/Button_Y"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="Y" />

            <!-- 第六行 -->
            <Button
                android:id="@+id/Button_Z"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="Z" />

        </GridLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/Button_Start"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:text="start"/>

            <Button
                android:id="@+id/Button_Hint"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:text="hint"/>

            <Button
                android:id="@+id/Button_Restart"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:text="new game"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>